syntax = "proto3";

package dto;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_registration) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/elojah/game_03/pkg/twitch/follow.proto";

message ListFollowReq {
    string After      = 3;
    string First      = 4;
}

message ListFollowResp {
    repeated twitch.Follow Follows = 1 [(gogoproto.nullable) = false];
    uint64 Total                   = 2;
    string Cursor                  = 3;
}
