syntax = "proto3";

package twitch;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_registration) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Follow {
    string FromID     = 1 [(gogoproto.jsontag) = "from_id"];
    string FromLogin  = 2 [(gogoproto.jsontag) = "from_login"];
    string FromName   = 3 [(gogoproto.jsontag) = "from_name"];
    string ToID       = 4 [(gogoproto.jsontag) = "to_id"];
    string ToLogin    = 5 [(gogoproto.jsontag) = "to_login"];
    string ToName     = 6 [(gogoproto.jsontag) = "to_name"];
    string FollowedAt = 7 [(gogoproto.jsontag) = "followed_at"];
}
